--- a/package.json
+++ b/package.json
@@ -4,21 +4,35 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev80": "next dev -p 80",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.4.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "browser-id3-writer": "^4.4.0",
+    "file-saver": "^2.0.5",
     "fluent-ffmpeg": "^2.1.2",
+    "formidable": "^2.0.1",
     "next": "11.0.1",
     "node-fetch": "^2.6.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
-    "ytdl-core": "^4.9.1"
+    "react-spinners": "^0.11.0",
+    "ytdl-core": "^4.9.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7"
   }
 }
